--- a/groups/templates/groups/add.html
+++ b/groups/templates/groups/add.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create Group</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Login
+{% endblock %}
+
+{% block content %}
     <h1>Add new Group</h1>
         <form class="form-with-validation" action="/groups/add/" method="post">
             {% csrf_token %}
             {{ form }}
             <button class="form-submit">Submit</button>
         </form>
-</body>
-</html>
+{% endblock %}
